testdata/baselines/reference/submodule/conformance/typeLookupInIIFE.errors.txt
a.js(3,12): error TS2503: Cannot find namespace 'ns'.
a.js(3,12): error TS8010: Type annotations can only be used in TypeScript files.


==== a.js (2 errors) ====
    // #22973
    var ns = (function() {})();
    /** @type {ns.NotFound} */
               ~~
!!! error TS2503: Cannot find namespace 'ns'.
               ~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    var crash;
    